DE presentation added

--- a/01Introduction.slides.html
+++ b/01Introduction.slides.html
@@ -11914,7 +11914,7 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="The-central-dogma-of-molecular-biology">The central dogma of molecular biology<a class="anchor-link" href="#The-central-dogma-of-molecular-biology">&#182;</a></h2><p>(over)simplified: “DNA makes RNA, RNA makes proteins, proteins make us.”</p>
-<p><img src="dogma.png" width="500"></p>
+<p><img src="images/dogma.png" width="500"></p>
 <ul>
 <li>Transcription</li>
 <li>Splicing</li>
@@ -11931,7 +11931,7 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>There are other types of RNA besides messenger RNA (mRNA): transfer RNA (tRNA), ribosomal RNA (rRNA), small and long non coding RNA (ncRNA).</p>
 <p><br>
-<img src="Peptide_syn.png" width="400"></p>
+<img src="images/Peptide_syn.png" width="400"></p>
 
 </div>
 </div>
@@ -11940,7 +11940,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="proc2.png" width="500"></p>
+<p><img src="images/proc2.png" width="500"></p>
 
 </div>
 </div>
@@ -11949,7 +11949,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="proc1.png" width="500"></p>
+<p><img src="images/proc1.png" width="500"></p>
 
 </div>
 </div>
@@ -11958,7 +11958,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="proc3.png" width="500"></p>
+<p><img src="images/proc3.png" width="500"></p>
 
 </div>
 </div>
@@ -11967,7 +11967,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="proc4.png" width="500"></p>
+<p><img src="images/proc4.png" width="500"></p>
 
 </div>
 </div>
@@ -11978,7 +11978,7 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>From a single gene, multiple <strong>transcripts</strong>(<strong>isoforms</strong>) can (and usually will) be formed.</p>
 <p><br>
-<img src="isoforms.png" width="700"></p>
+<img src="images/isoforms.png" width="700"></p>
 
 </div>
 </div>
@@ -11999,16 +11999,52 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Most of the RNA in a cell is ribosomal RNA (an RNA component of ribosome which is approx 60% rRNA and 40% protein). This is an issue since most scientists (and enthusiasts like us) will be interested in mRNA because of its protein coding function. There are two popular methods for increasing mRNA concentration in your samples:</p>
+<h2 id="Before-sequencing---library-prep!">Before sequencing - library prep!<a class="anchor-link" href="#Before-sequencing---library-prep!">&#182;</a></h2><p>Choosing the appropriate sequencing protocol:</p>
+<ul>
+<li><p>Most of the RNA in a cell is ribosomal RNA (an RNA component of ribosome which is approx 60% rRNA and 40% protein). This is an issue since most scientists (and enthusiasts like us) will be interested in mRNA because of its protein coding function. There are two popular methods for increasing mRNA concentration in your samples:</p>
 <ol>
 <li>poly (A) capture </li>
 <li>ribosomal RNA depletion</li>
 </ol>
+</li>
+</ul>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="images/lp1.png" width="600"></p>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="images/lp2.png" width="600"></p>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<ul>
+<li>There are also total-RNA protocols that do not enrich for a specific RNA type</li>
+<li>Different fragment sizes</li>
+<li>Bulk or single cel RNA-Seq</li>
+<li>...</li>
+</ul>
 <p>Then what? Microarrays or RNA-Seq!</p>
 
 </div>
 </div>
-</div></section></section><section><section>
+</div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -12064,7 +12100,7 @@ a.anchor-link {
 </div>
 </div>
 
-</div></div></section></section><section><section>
+</div></div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -12074,7 +12110,7 @@ a.anchor-link {
 <li>Uses next-generation sequencing (NGS) to reveal the presence and quantity of RNA in a biological sample at a given moment.</li>
 <li>Able to detect novel (undiscovered) isoforms and has a broader dynamic range compapred to microarrays.</li>
 </ul>
-<p><img src="http://bio.lundberg.gu.se/courses/vt13/rna4.JPG.jpg" width="450"></p>
+<p><img src="images/Bo7TRo5IUAAJ6KD.jpg" width="450"></p>
 
 </div>
 </div>
