--- a/02Alignment.slides.html
+++ b/02Alignment.slides.html
@@ -11905,7 +11905,8 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Genome-informatics">Genome informatics<a class="anchor-link" href="#Genome-informatics">&#182;</a></h2><h1 id="RNA-Seq-analysis-:-Alignment">RNA-Seq analysis : Alignment<a class="anchor-link" href="#RNA-Seq-analysis-:-Alignment">&#182;</a></h1>
+<h2 id="Genome-informatics">Genome informatics<a class="anchor-link" href="#Genome-informatics">&#182;</a></h2><h1 id="RNA-Seq-analysis-:-Alignment">RNA-Seq analysis : Alignment<a class="anchor-link" href="#RNA-Seq-analysis-:-Alignment">&#182;</a></h1><p>* Adapted from <a href="https://genomebiology.biomedcentral.com/articles/10.1186/gb-2013-14-4-r36">Tophat2 paper</a></p>
+
 </div>
 </div>
 </div></section></section><section><section>
