--- a/01Introduction.slides.html
+++ b/01Introduction.slides.html
@@ -12035,9 +12035,9 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>There are also total-RNA protocols that do not enrich for a specific RNA type</li>
+<li>There are also total-RNA protocols that do not enrich for a specific RNA type - for "total RNA" studies.</li>
 <li>Different fragment sizes</li>
-<li>Bulk or single cel RNA-Seq</li>
+<li>Bulk or single cell RNA-Seq</li>
 <li>...</li>
 </ul>
 <p>Then what? Microarrays or RNA-Seq!</p>
