--- a/03Quantification.slides.html
+++ b/03Quantification.slides.html
@@ -11914,12 +11914,15 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Motivation-for-RNA-Seq-quantification">Motivation for RNA-Seq quantification<a class="anchor-link" href="#Motivation-for-RNA-Seq-quantification">&#182;</a></h2><ul>
-<li>Typical studies:<ul>
-<li>DNA-Seq -&gt; alignment -&gt; variant calling;</li>
-<li>RNA-Seq -&gt; alignment -&gt; quantification -&gt; differential expression analysis</li>
+<li><p>Typical studies:</p>
+<ul>
+<li><p>DNA-Seq -&gt; alignment -&gt; variant calling -&gt; genome wide association study;</p>
+<p><img src="images/GWAS2-700x438.png" width="400"></p>
+</li>
+<li><p>RNA-Seq -&gt; alignment -&gt; quantification -&gt; differential expression analysis</p>
+</li>
 </ul>
 </li>
-<li>We usually want to check if there is change in transcription between conditions (healthy/sick, treated/untreated, different tissues...).</li>
 </ul>
 
 </div>
@@ -11936,15 +11939,6 @@ a.anchor-link {
 </ul>
 <p><br>
 <img src="images/em1.png" width="550"></p>
-
-</div>
-</div>
-</div></section><section>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="images/em1.png" width="550"></p>
 
 </div>
 </div>
