--- a/01Introduction.slides.html
+++ b/01Introduction.slides.html
@@ -11987,8 +11987,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Why-measure-gene-expression?">Why measure gene expression?<a class="anchor-link" href="#Why-measure-gene-expression?">&#182;</a></h2><p>Small variations in our DNA can correlate with differences in the way individuals respond to a medication or in their risk for getting a disease. Often, these variations occur within the DNA letters that make up the protein-coding portion of a gene, influencing how the protein works.</p>
-<p>Changing the protein-coding sequence isn't the only way to affect a gene, though. <strong>Increasing or decreasing the amount of RNA or protein that is made from it can influence biological processes just as dramatically.</strong></p>
+<h2 id="Why-measure-gene-expression?">Why measure gene expression?<a class="anchor-link" href="#Why-measure-gene-expression?">&#182;</a></h2><p><strong>Because gene expression correlates with protein expression!</strong></p>
 <p>Even though nearly every cell in an organism's body contains the same set of genes, only a fraction of these genes are used in any given cell at any given time. It is this carefully controlled pattern of what is called "gene expression" that makes a liver cell different from a muscle cell, and a healthy cell different from a cancer cell.</p>
 <p>By measuring gene expression, we can identify active and inactive genes in a cell or tissue. This knowledge is important for drug discovery and creating diagnostic tests.</p>
 
@@ -12035,9 +12034,9 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>There are also total-RNA protocols that do not enrich for a specific RNA type - for "total RNA" studies.</li>
-<li>Different fragment sizes</li>
-<li>Bulk or single cell RNA-Seq</li>
+<li>There are also total-RNA protocols that do not enrich for a specific RNA type - for "total RNA" studies;</li>
+<li>Different fragment sizes;</li>
+<li>Bulk or single cell RNA-Seq;</li>
 <li>...</li>
 </ul>
 <p>Then what? Microarrays or RNA-Seq!</p>
