--- a/04DifferentialExpression.slides.html
+++ b/04DifferentialExpression.slides.html
@@ -13322,7 +13322,7 @@ $$\sigma_{Y}^2 = \frac{1}{n}\sum_{i=1}^{n}(y_{i}-\mu_{Y})^{2}$$</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>If we subtract a constant from a random variable, the mean of the new random variable shifts by that constant. Mathematically, if $X$ is a random variable with mean $\mu$ and $a$ is a constant, the mean of $X − a$ is $\mu − a$. A similarly intuitive result holds for multiplication and the standard deviation (SD). If $X$ is a random variable with mean $\mu$ and SD $\sigma$, and $a$ is a constant, then the mean and SD of $aX$ are $a\mu$ and $| a | \sigma$ respectively.</p>
 <p>Knowing this, the CLT implies that if we take many samples of size $N$, then the quantity:</p>
-<p>$$\frac{\bar{Y}-\mu_{Y}}{\sigma_{Y}/N}$$</p>
+<p>$$\frac{\bar{Y}-\mu_{Y}}{\sigma_{Y}/\sqrt{N}}$$</p>
 <p>is approximated with a normal distribution centered at 0 and with standard deviation 1.</p>
 
 </div>
